# git_status

./: Cargo.toml  README.md
src/: folder_scanner.rs  git.rs  main.rs
